--- a/gamerapp/templates/home.html
+++ b/gamerapp/templates/home.html
@@ -11,7 +11,7 @@
                         <div id="stars2"></div>
                         <div id="stars3"></div>
                     </section>
-                    <h1 class="fw-bolder" style="color:white">Welcome to Gaming Hub</h1>
+                    <h1 class="fw-bolder" style="color:white">Welcome to the Gaming Hub</h1>
                     <p class="lead mb-0" style="color:white">The Gamers Paradise</p>
                 </div>
             </div>
