--- a/gamerapp/templates/knowledge_base/pc_knowledge/prebuilt_vs_custom_pc.html
+++ b/gamerapp/templates/knowledge_base/pc_knowledge/prebuilt_vs_custom_pc.html
@@ -39,7 +39,7 @@
                         <figure class="mb-4"><img style="border-radius: 15px;margin-bottom:30px;" class="card-img-top" src="{{review.image.url}}" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
-                            <p style="font-size:30px;" class="fs-5 mb-4">
+                            <p class="fs-5 mb-4">
                                 Are you torn between purchasing a prebuilt gaming PC or assembling a custom one? The ongoing debate between off-the-shelf versus custom-built 
                                 gaming rigs has seen various shifts over the years. While some traditional beliefs about prebuilt systems remain valid, there are also evolving 
                                 considerations to ponder. This guide aims to help you navigate the prebuilt vs. custom PC dilemma, assisting you in determining which option suits
