--- a/gamerapp/templates/partials/right_side_widget.html
+++ b/gamerapp/templates/partials/right_side_widget.html
@@ -3,7 +3,7 @@
 {% else %}
 <div style="margin-top:-20px;" class="col-lg-2" id = "right-widget">
 {% endif %}
-    <p style="font-size:12px;margin-top:20px;margin-left:12px;">GamingHub is reader-supported. When you purchase through links on our site, we may earn a small commission.</p>
+    <p style="font-size:12px;margin-top:20px;margin-left:12px;">TheGamingHub is reader-supported. When you purchase through links on our site, we may earn a small commission.</p>
     <div class="divider"></div>
     <h3 style="margin-left:12px;padding-bottom:8px;">You May Like</h3>
     {% for review in you_may_like %}
