--- a/gamerapp/templates/pc_builds/pc_under_1000.html
+++ b/gamerapp/templates/pc_builds/pc_under_1000.html
@@ -117,7 +117,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_cpu.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3TfgGWc" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_cpu.png' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -129,7 +129,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3TrHDWV" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -141,7 +141,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_motherboard.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3v2iM2a" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_motherboard.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -153,7 +153,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3wyfkNk" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -165,7 +165,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_storage.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3wwRIbT" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_storage.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -177,7 +177,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_psu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3ThY5ss" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_psu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -189,7 +189,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_case.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3Igof8T" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1000/pc_under_1000_usd_case.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -201,7 +201,7 @@
                             </div>
                             <br>
                             <div class="d-grid gap-2">
-                                <a class="btn pc-build-button" type="button">ORDER THIS BUILD</a>
+                                <a href="https://amzn.to/3Ti7cta" target="_blank" class="btn pc-build-button" type="button">ORDER THIS BUILD</a>
                             </div>
                         </section>
                         <div style="margin-top:45px;margin-bottom:45px;margin-left:1px; width:60px;" class="divider"></div>
@@ -244,7 +244,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3TfgGWc" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -294,7 +294,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3TrHDWV" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -321,7 +321,7 @@
                                             <tbody>
                                                 <tr>
                                                     <th>Chipset</th>
-                                                    <td>X570</td>
+                                                    <td>AMD B550</td>
                                                 </tr>
                                                 <tr>
                                                     <th>Socket</th>
@@ -334,7 +334,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3v2iM2a" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -381,7 +381,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3wyfkNk" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -419,7 +419,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3wwRIbT" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -463,7 +463,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3ThY5ss" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -506,7 +506,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3Igof8T" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
