--- a/gamerapp/templates/pc_builds/pc_under_1200.html
+++ b/gamerapp/templates/pc_builds/pc_under_1200.html
@@ -122,7 +122,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_cpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3IhwRvJ" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_cpu.jpg' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -134,7 +134,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49U3QCg" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -146,7 +146,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_cooler.jpg ' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4bVIN3W" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_cooler.jpg ' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Cooler
@@ -158,7 +158,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_motherboard.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49V0uia" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_motherboard.png' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -170,7 +170,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img  class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/42Wm7fK" target="_blank"><img  class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -182,19 +182,19 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_storage.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/42VbE4p" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_storage.png' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
                                     </div>
                                     <div class="pc-comp-text">
-                                        WD Black SN850X 2TB
+                                        WD Black SN850X 1TB
                                     </div>                           
                                 </div>
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_psu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4bXbehV" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_psu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -206,7 +206,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_case.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/48zWCSO" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1200/pc_under_1200_usd_case.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -218,7 +218,7 @@
                             </div>
                             <br>
                             <div class="d-grid gap-2">
-                                <a class="btn pc-build-button" type="button">ORDER THIS BUILD</a>
+                                <a href="https://amzn.to/3wHDRiU" target="_blank" class="btn pc-build-button" type="button">ORDER THIS BUILD</a>
                             </div>
                         </section>
                         <div style="margin-top:45px;margin-bottom:45px;margin-left:1px; width:60px;" class="divider"></div>
@@ -261,7 +261,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3IhwRvJ" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -307,7 +307,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49U3QCg" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -357,7 +357,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4bVIN3W" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -394,7 +394,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49V0uia" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -441,7 +441,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/42Wm7fK" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -469,7 +469,7 @@
                                                 </tr>
                                                 <tr>
                                                     <th>Capacity</th>
-                                                    <td>2TB</td>
+                                                    <td>1TB</td>
                                                 </tr>
                                                 <tr>
                                                     <th>Interface</th>
@@ -478,7 +478,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/42VbE4p" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -519,7 +519,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4bXbehV" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -563,7 +563,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/48zWCSO" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
