--- a/gamerapp/templates/pc_builds/pc_under_800.html
+++ b/gamerapp/templates/pc_builds/pc_under_800.html
@@ -127,7 +127,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_cpu.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3wsvVSz" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_cpu.png' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -139,7 +139,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3uUjCyc" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -151,7 +151,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_motherboard.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49TINj3" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_motherboard.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -163,7 +163,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49wWTHf" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -175,7 +175,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_storage.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/48AxyLh" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_storage.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -187,7 +187,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_psu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3wyQxbT" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_psu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -199,7 +199,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_case.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49Xu8DH" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_800/pc_under_800_usd_case.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -211,7 +211,7 @@
                             </div>
                             <br>
                             <div class="d-grid gap-2">
-                                <a class="btn pc-build-button" type="button">ORDER THIS BUILD</a>
+                                <a href="https://amzn.to/3UZKYh4" target="_blank" class="btn pc-build-button" type="button">ORDER THIS BUILD</a>
                             </div>
                         </section>
                         <div style="margin-top:45px;margin-bottom:45px;margin-left:1px; width:60px;" class="divider"></div>
@@ -254,7 +254,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3wsvVSz" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -303,7 +303,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3uUjCyc" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -341,7 +341,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49TINj3" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -388,7 +388,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49wWTHf" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -426,7 +426,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/48AxyLh" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -465,7 +465,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3wyQxbT" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -506,7 +506,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49Xu8DH" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
