--- a/gamerapp/templates/reviews/gaming_peripherals/mouse_reviews/finalmouse_ultralightx_review.html
+++ b/gamerapp/templates/reviews/gaming_peripherals/mouse_reviews/finalmouse_ultralightx_review.html
@@ -129,7 +129,7 @@
                                             <h5><a class="con">✖</a> Scroll wheel lacks premium feel and grip, with potential unintentional actuation by pushing it to the right</h5>
                                         </div>
                                     </div>
-                                    <div class="row">
+                                    <div class="row" style="margin-bottom:15px;">
                                         <div class="col-md-6">
                                             <div class="d-grid gap-2">
                                                 <a class="btn review-cons-pros-btn" type="button">See Price on finalmouse.com</a>
@@ -139,7 +139,7 @@
                                             <div class="d-grid gap-2">
                                                 <a class="btn review-cons-pros-btn" type="button">See Price on amazon</a>
                                             </div>
-                                        <div>
+                                        </div>
                                     </div>
                                 </div>
                             </p>
