--- a/gamerapp/templates/pc_builds/pc_under_700.html
+++ b/gamerapp/templates/pc_builds/pc_under_700.html
@@ -144,7 +144,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_cpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49WrOwL" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_cpu.jpg' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -156,7 +156,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3uVFMzZ" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -168,7 +168,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_motherboard.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/48DLxQF" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_motherboard.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -180,7 +180,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49TLf9j" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -192,7 +192,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_storage.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49zfHWD" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_storage.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -204,7 +204,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_psu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49zLWVq" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_psu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -216,7 +216,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_case.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3wBCEtC" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_700/pc_under_700_usd_case.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -228,7 +228,7 @@
                             </div>
                             <br>
                             <div class="d-grid gap-2">
-                                <a class="btn pc-build-button" type="button">ORDER THIS BUILD</a>
+                                <a href="https://amzn.to/3IjsikA" target="_blank" class="btn pc-build-button" type="button">ORDER THIS BUILD</a>
                             </div>
                         </section>
                         <div style="margin-top:45px;margin-bottom:45px;margin-left:1px; width:60px;" class="divider"></div>
@@ -271,7 +271,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49WrOwL" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -318,7 +318,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3uVFMzZ" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -356,7 +356,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/48DLxQF" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -408,7 +408,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49TLf9j" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -449,7 +449,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49zfHWD" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -489,7 +489,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49zLWVq" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -531,7 +531,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3wBCEtC" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
