--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11540,8 +11540,8 @@ a {
 
 .custom-footer {
   margin-bottom: -20px;
-  margin-right:-111.5px;
-  margin-left:-111.5px;
+  margin-right:0;
+  margin-left:0;
 }
 @media (max-width: 767px) {
   .custom-footer {
@@ -11555,10 +11555,23 @@ a {
   margin: -30px 0 auto; /* Center horizontally */
   display: block; /* Ensure the logo behaves as a block element */
 }
+
+/* slider-- */
+.slider{
+	margin-right:0;
+	margin-left:0;
+	margin-top:-8px;
+}
+
+.slider_img{
+	height: 30vw;
+}
+
 /* footer css-------------------------------------- */
 .social-icons{
 	padding:15px;
-  margin-top: 20px;
+  margin-top: 15px;
+  margin-left: 35px;
 	background-color: RGBA(33, 37, 41, var(--bs-bg-opacity, 1));
   text-align: center;
 }
